--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1 class="titulo-principal">Barbearia Alura</h1>
+    <header> 
+        <div class="box">
+            <h1 class="titulo-principal">Barbearia Alura</h1> 
+            <h1><img src="imagens_produtos/logo.png" alt=""></h1>
+
+            <nav>
+                <ul class="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <img id="banner" src="banner.jpg"> 
@@ -37,5 +48,10 @@
 
         <img class="beneficios" src="beneficios.jpg">
     </div>
+
+    <footer>
+        <img src="imagens_produtos/logo-branco.png" alt="logo barbearia, desenho vetorizado de cabelo e barba com bigode">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
+    </footer>
 </body>
 </html>
