--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-home.css">
 </head>
 <body>
     <header> 
         <div class="box">
-            <h1 class="titulo-principal">Barbearia Alura</h1> 
             <h1><img src="imagens_produtos/logo.png" alt=""></h1>
 
             <nav>
@@ -24,6 +23,7 @@
     </header>
 
     <img id="banner" src="banner.jpg"> 
+    
     
     <div class="principal">    
         <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
